testdata/golden/sema/invalid/entrypoint_multiple_binary/only.fmt
pragma binary;

@entrypoint
fn main() {}

@entrypoint
fn alt() {}
